--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Write issue to file
         run: |
-          echo "${ISSUE_BODY}" > ${ISSUE_TITLE}.txt
+          ISSUE_TITLE_SAFE=$(echo "${ISSUE_TITLE}" | tr './:\\~^*?[]@{-' '_')
+          echo "${ISSUE_BODY}" > "${ISSUE_TITLE_SAFE}.txt"
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_BODY: ${{ github.event.issue.body }}
@@ -24,7 +25,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "add ${ISSUE_TITLE}.txt"
+          git commit -m "add ${ISSUE_TITLE}"
           git push
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
