--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -29,3 +29,4 @@ jobs:
           git push
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
