--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -26,6 +26,7 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "add ${ISSUE_TITLE}"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git push
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
