--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Close Issue
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add .
           git commit -m "add ${ISSUE_TITLE}"
           git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${{ github.repository }}
