--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   close-issue:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,11 +24,10 @@ jobs:
 
       - name: Close Issue
         run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "add ${ISSUE_TITLE}"
-          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git push
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
