--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_BODY: ${{ github.event.issue.body }}
-        working-directory: ./memo
+        working-directory: ./nikki
 
       - name: Push file
         run: |
