--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-  },
+	"features": {
+		"ghcr.io/devcontainers-contrib/features/act:1": {}
+	},
   "customizations": {
     "vscode": {
       "extensions": [
